tests/invalid/runtime/slice_invalidated_pop.pts
import Io;

function main() : void {
    list<int> xs = [1, 2, 3];
    slice<int> s = xs.slice(0, 2);
    xs.pop();
    int a = s[0];
    Io.printLine(a.toString());
}
